# polymarket-paper-trader

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/polymarket-paper-trader/: SKILL.md
.github/workflows/: publish.yml
docs/plans/: 2026-02-28-pm-sim-design.md
pm_sim/: api.py  backtest.py  cli.py  db.py  engine.py  export.py  mcp_server.py  models.py  orders.py
pm_trader/: api.py  card.py  cli.py  mcp_server.py
skill/polymarket-paper-trader/: SKILL.md
tests/: test___main__.py  test_analytics.py  test_api.py  test_backtest.py  test_behavior.py  test_card.py  test_cli.py  test_db.py  test_engine.py  test_export.py  test_mcp_server.py  test_orders.py
