[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-sim"
version = "0.1.0"
description = "1:1 faithful Polymarket paper trading simulator for AI agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
pm-sim = "pm_sim.cli:main"
pm-sim-mcp = "pm_sim.mcp_server:main"
